test/trivial/bradc/entrypoint/twomains.good
twomains.chpl:11: error: main multiply defined -- first occurrence at twomains.chpl:4
