test/trivial/bradc/entrypoint/twomains.chpl
var x = 32;
var y = -1;

def main() {
  var y = 42;

  writeln("x is: ", x);
  writeln("y is: ", y);  
}

def main() {
  writeln("Should never get here");
}
